--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.6",
     "expo": "^43.0.3",
     "expo-status-bar": "~1.1.0",
     "react": "17.0.1",
