--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "react-native": "0.64.3",
     "react-native-paper": "^4.10.0",
     "react-native-safe-area-context": "^3.3.2",
-    "react-native-web": "0.17.1"
+    "react-native-svg": "^12.1.1",
+    "react-native-web": "0.17.1",
+    "victory-native": "^36.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
