--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-gifted-charts": "^0.2.0",
     "react-native-paper": "^4.10.0",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.9.0",
-    "react-native-svg": "^12.1.1",
     "react-native-web": "0.17.1",
     "victory-native": "^36.2.0"
   },
