--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
+    "axios": "^0.24.0",
     "expo": "^43.0.3",
     "expo-status-bar": "~1.1.0",
     "react": "17.0.1",
@@ -21,6 +22,7 @@
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.9.0",
     "react-native-svg": "^12.1.1",
+    "react-native-vector-icons": "^9.0.0",
     "react-native-web": "0.17.1",
     "victory-native": "^36.2.0"
   },
