--- a/package.json
+++ b/package.json
@@ -10,17 +10,23 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-masked-view/masked-view": "0.2.5",
+    "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
+    "@react-navigation/stack": "^6.0.11",
+    "@types/react-native-vector-icons": "^6.4.10",
     "expo": "^43.0.3",
     "expo-status-bar": "~1.1.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-gesture-handler": "~1.10.2",
     "react-native-gifted-charts": "^0.2.0",
     "react-native-paper": "^4.10.0",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.9.0",
+    "react-native-vector-icons": "^9.0.0",
     "react-native-web": "0.17.1",
     "victory-native": "^36.2.0"
   },
